--- a/src/main/resources/views/PaneTop.fxml
+++ b/src/main/resources/views/PaneTop.fxml
@@ -15,31 +15,104 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="882.0" maxWidth="1262.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneTopController">
+<AnchorPane prefHeight="875.0" prefWidth="1340.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneTopController">
    <children>
-      <VBox alignment="TOP_CENTER" AnchorPane.topAnchor="0.0">
+      <VBox minHeight="620.0" minWidth="1030.0" prefHeight="980.0" prefWidth="1670.0" style="-fx-background-color: #E9E9E9;" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox alignment="TOP_CENTER" maxWidth="1200.0" minWidth="1200.0" prefWidth="1200.0" style="-fx-background-color: #292929; -fx-background-radius: 8;">
+            <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #292929; -fx-background-radius: 8;">
+               <VBox.margin>
+                  <Insets bottom="12.0" left="40.0" right="40.0" top="30.0" />
+               </VBox.margin>
                <children>
-                  <ImageView fitHeight="32.0" fitWidth="1200.0" pickOnBounds="true">
-                     <image>
-                        <Image url="@../images/others/filmLine.PNG" />
-                     </image>
-                  </ImageView>
-                  <GridPane alignment="TOP_CENTER" maxWidth="1200.0" minWidth="1200.0" prefWidth="1200.0">
-                    <columnConstraints>
-                      <ColumnConstraints halignment="CENTER" minWidth="100.0" />
-                      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="100.0" />
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="100.0" />
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="100.0" />
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="100.0" />
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="100.0" />
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="100.0" />
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="220.0" prefHeight="220.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
+                  <VBox layoutX="-1.0" layoutY="-1.0" prefHeight="303.0" prefWidth="1200.0">
+                     <children>
+                        <ImageView fitHeight="32.0" fitWidth="1240.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/others/filmLine.PNG" />
+                           </image>
+                        </ImageView>
+                        <GridPane alignment="TOP_CENTER" prefHeight="220.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <ImageView fx:id="imgObra00" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle00" pickOnBounds="true" preserveRatio="true" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
+                                 </image>
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin>
+                              </ImageView>
+                              <ImageView fx:id="imgObra01" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle01" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fx:id="imgObra02" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle02" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fx:id="imgObra03" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle03" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fx:id="imgObra04" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle04" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fx:id="imgObra05" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle05" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fx:id="imgObra06" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle06" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fx:id="imgObra07" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle07" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </GridPane>
+                        <ImageView fitHeight="32.0" fitWidth="1240.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/others/filmLine.PNG" />
+                           </image>
+                        </ImageView>
+                     </children>
+                     <padding>
+                        <Insets left="12.0" top="10.0" />
+                     </padding>
+                  </VBox>
+               </children>
+            </Pane>
+            <Pane prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <GridPane prefHeight="50.0" prefWidth="1278.0" style="-fx-background-color: #292929; -fx-background-radius: 8;">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="831.0" minWidth="10.0" prefWidth="807.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="693.0" minWidth="10.0" prefWidth="589.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
                      <children>
                         <HBox alignment="CENTER_LEFT" spacing="20.0">
                            <children>
@@ -68,102 +141,19 @@
                               </RadioButton>
                            </children>
                            <GridPane.margin>
-                              <Insets />
+                              <Insets left="25.0" />
                            </GridPane.margin>
-                        </ImageView>
-                        <ImageView fx:id="imgObra01" fitHeight="220.0" fitWidth="160.0" onMouseEntered="#onMouseEnteredTitle01" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
-                        <ImageView fx:id="imgObra02" fitHeight="220.0" fitWidth="160.0" onMouseEntered="#onMouseEnteredTitle02" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
-                        <ImageView fx:id="imgObra03" fitHeight="220.0" fitWidth="160.0" onMouseEntered="#onMouseEnteredTitle03" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
-                        <ImageView fx:id="imgObra04" fitHeight="220.0" fitWidth="160.0" onMouseEntered="#onMouseEnteredTitle04" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
-                        <ImageView fx:id="imgObra05" fitHeight="220.0" fitWidth="160.0" onMouseEntered="#onMouseEnteredTitle05" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
-                        <ImageView fx:id="imgObra06" fitHeight="220.0" fitWidth="160.0" onMouseEntered="#onMouseEnteredTitle06" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
-                        <ImageView fx:id="imgObra07" fitHeight="220.0" fitWidth="160.0" onMouseEntered="#onMouseEnteredTitle07" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        </HBox>
                      </children>
                   </GridPane>
-                  <ImageView fitHeight="32.0" fitWidth="1200.0" pickOnBounds="true">
-                     <image>
-                        <Image url="@../images/others/filmLine.PNG" />
-                     </image>
-                  </ImageView>
-               </children>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets left="20.0" right="30.0" top="30.0" />
-               </VBox.margin>
-            </VBox>
-            <Pane maxHeight="50.0" maxWidth="1200.0" minHeight="50.0" minWidth="1200.0" prefHeight="50.0" prefWidth="1200.0" style="-fx-background-color: #292929; -fx-background-radius: 8;" VBox.vgrow="ALWAYS">
-               <children>
-                  <HBox alignment="CENTER_LEFT" spacing="20.0">
-                     <children>
-                        <RadioButton fx:id="rbTodos" mnemonicParsing="false" selected="true" text="Todos los tiempos" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                           <toggleGroup>
-                              <ToggleGroup fx:id="btnGroup" />
-                           </toggleGroup>
-                           <HBox.margin>
-                              <Insets left="25.0" />
-                           </HBox.margin>
-                        </RadioButton>
-                        <RadioButton fx:id="rbDecada" mnemonicParsing="false" text="Última década" textFill="WHITE" toggleGroup="$btnGroup">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                        </RadioButton>
-                        <RadioButton fx:id="rbAnno" mnemonicParsing="false" text="Este año" textFill="WHITE" toggleGroup="$btnGroup">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                        </RadioButton>
-                        <RadioButton fx:id="rb3Meses" mnemonicParsing="false" text="Últimos 3 meses" textFill="WHITE" toggleGroup="$btnGroup">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                        </RadioButton>
-                     </children>
-                     <padding>
-                        <Insets bottom="12.0" top="12.0" />
-                     </padding>
-                  </HBox>
                </children>
                <VBox.margin>
-                  <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
+                  <Insets bottom="12.0" left="40.0" right="40.0" />
                </VBox.margin>
             </Pane>
-            <Pane style="-fx-background-color: #292929; -fx-background-radius: 8;" VBox.vgrow="ALWAYS">
+            <Pane>
                <children>
-                  <VBox minWidth="0.0">
+                  <VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="393.0" prefWidth="1278.0" style="-fx-background-color: #292929; -fx-background-radius: 8;">
                      <children>
                         <Label fx:id="lblTitulo" alignment="TOP_LEFT" prefHeight="52.0" prefWidth="1199.0" textFill="WHITE" wrapText="true">
                            <font>
@@ -205,18 +195,15 @@
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
-                           <VBox.margin>
-                              <Insets right="20.0" />
-                           </VBox.margin>
                         </Label>
                      </children>
                      <padding>
-                        <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+                        <Insets bottom="20.0" left="30.0" top="30.0" />
                      </padding>
                   </VBox>
                </children>
                <VBox.margin>
-                  <Insets bottom="30.0" left="30.0" right="30.0" />
+                  <Insets bottom="30.0" left="40.0" right="40.0" />
                </VBox.margin>
             </Pane>
          </children>
