--- a/src/main/resources/views/PaneCartelera.fxml
+++ b/src/main/resources/views/PaneCartelera.fxml
@@ -16,23 +16,20 @@
       <VBox alignment="TOP_CENTER" maxHeight="882.0" maxWidth="1262.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0" AnchorPane.topAnchor="0.0">
          <children>
             <GridPane alignment="TOP_CENTER" hgap="20.0" style="-fx-background-color: #3B3B3B; -fx-background-radius: 8;" vgap="15.0" VBox.vgrow="ALWAYS">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="540.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="540.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="540.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="540.0" />
+               </columnConstraints>
+               <rowConstraints>
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <children>
                         <ImageView fx:id="imgPoster00" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
                            <HBox.margin>
                               <Insets />
                            </HBox.margin>
@@ -102,11 +99,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster01" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imgPoster01" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
                               <Label fx:id="lblTitulo01" prefWidth="405.0" textFill="WHITE">
@@ -139,11 +132,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster11" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imgPoster11" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
                               <Label fx:id="lblTitulo11" prefWidth="405.0" textFill="WHITE">
@@ -176,11 +165,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster02" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imgPoster02" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
                               <Label fx:id="lblTitulo02" prefWidth="405.0" textFill="WHITE">
@@ -213,11 +198,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster12" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imgPoster12" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
                               <Label fx:id="lblTitulo12" prefWidth="405.0" textFill="WHITE">
@@ -250,11 +231,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster03" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imgPoster03" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
                               <Label fx:id="lblTitulo03" prefWidth="405.0" textFill="WHITE">
@@ -287,11 +264,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster13" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imgPoster13" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
                               <Label fx:id="lblTitulo13" prefWidth="405.0" textFill="WHITE">
